<resources>
    <string name="app_name">VirginMoney</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_account">My Details</string>
    <string name="menu_people">Staff Details</string>
    <string name="menu_rooms">Rooms Status</string>
    <string name="search_title">SearchBar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favcolor">FavoriteColor</string>
    <string name="jobtitle">JobTitle</string>
    <string name="email">Email</string>
    <string name="id">ID</string>
    <string name="roomsid">RoomID</string>
    <string name="Status">Status</string>
    <string name="MaxLimit">MaxLimit</string>
    <string name="name">Name</string>
    <string name="firstname">First name</string>
    <string name="maxlimit">Maxlimit</string>
    <string name="status">Status</string>
    <string name="no">Room No</string>
</resources>