<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clPeople"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:elevation="8dp"
    app:cardCornerRadius="20dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:id="@+id/llPeople"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">


        <ImageView
            android:id="@+id/people_image"
            android:layout_width="245dp"
            android:layout_height="284dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/heading_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingBottom="5dp"
                android:text="Name:"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/people_firstname"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/firstname"
                android:textStyle="bold"

                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/heading_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingBottom="5dp"
                android:text="ID:"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/people_id"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/id"
                android:textStyle="bold"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/heading_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingBottom="5dp"
                android:text="EMAIL:"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/people_email"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/email"
                android:textStyle="bold"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/heading_jobtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingBottom="5dp"
                android:text="JOB TITLE:"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/people_jobtitle"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/jobtitle"
                android:textStyle="bold"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/heading_favcolor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingBottom="5dp"
                android:text="FAV COLOR:"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/people_favcolor"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/favcolor"
                android:textStyle="bold"
                android:textAlignment="center"/>

        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>